[project]
name = "agent-hub"
version = "0.1.0"
description = "AWS CDK project"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.224.0",
    "constructs>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "awscli>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
